fix gxg-column alignment

--- a/src/components/column/column.scss
+++ b/src/components/column/column.scss
@@ -32,6 +32,7 @@
 }
 :host .inner-container {
   width: 100%;
+  display: flex;
 }
 
 //halfs
